# example-interactive-installation

./: CHANGELOG.md  README.md  pyproject.toml  seed.yaml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
examples/: run_simulation.py
presets/: depth_field.yaml  motion_trace.yaml  spatial_audio.yaml
renderers/: __init__.py  json_stream.py  osc.py  terminal.py
src/: __init__.py  config.py  engine.py  mapping.py  output.py  sensor_sim.py
tests/: test_config.py  test_engine.py  test_mapping.py  test_renderers.py  test_sensor_sim.py
